--- a/src/app/pages/grouping/grouping.page.html
+++ b/src/app/pages/grouping/grouping.page.html
@@ -8,7 +8,9 @@
 </ion-header>
 <ion-content>
   <ion-item lines="full">
-    <a href="{{'grouping-items' | wikiUrl}}">GitHub</a>
+    <a href="{{'grouping-items' | wikiUrl}}">
+      GitHub
+    </a>
   </ion-item>
   <ion-item lines="full">
     <ion-label text-wrap>
@@ -17,9 +19,9 @@
   </ion-item>
   <ion-item>
     <ion-label>Port</ion-label>
-    <ionic-selectable [(ngModel)]="port" itemValueField="id" itemTextField="name"
-      groupValueField="country.id" groupTextField="country.name" [items]="ports"
-      [canSearch]="true">
+    <ionic-selectable [(ngModel)]="port" itemValueField="id"
+      itemTextField="name" groupValueField="country.id"
+      groupTextField="country.name" [items]="ports" [canSearch]="true">
       <ng-template ionicSelectableGroupTemplate let-group="group">
         <ion-label>
           {{group.text}}
