--- a/src/app/pages/infinite-scroll-is-multiple/infinite-scroll-is-multiple.page.html
+++ b/src/app/pages/infinite-scroll-is-multiple/infinite-scroll-is-multiple.page.html
@@ -14,9 +14,10 @@
   </ion-item>
   <ion-item>
     <ion-label>Ports</ion-label>
-    <ionic-selectable [(ngModel)]="port" itemValueField="id" itemTextField="name"
-      [items]="ports" [canSearch]="true" [isMultiple]="true"
-      [hasInfiniteScroll]="true" (onSearch)="searchPorts($event)"
+    <ionic-selectable [(ngModel)]="port" itemValueField="id"
+      itemTextField="name" [items]="ports" [canSearch]="true"
+      [isMultiple]="true" [hasInfiniteScroll]="true"
+      (onSearch)="searchPorts($event)"
       (onInfiniteScroll)="getMorePorts($event)">
     </ionic-selectable>
   </ion-item>
