--- a/src/app/pages/initial-value/initial-value.page.html
+++ b/src/app/pages/initial-value/initial-value.page.html
@@ -14,8 +14,8 @@
   </ion-item>
   <ion-item>
     <ion-label>Port</ion-label>
-    <ionic-selectable [(ngModel)]="port" itemValueField="id" itemTextField="name"
-      [items]="ports">
+    <ionic-selectable [(ngModel)]="port" itemValueField="id"
+      itemTextField="name" [items]="ports">
     </ionic-selectable>
   </ion-item>
   <ion-item>
