--- a/src/app/pages/labels/labels.page.html
+++ b/src/app/pages/labels/labels.page.html
@@ -21,8 +21,10 @@
     </ion-item>
     <ion-item>
       <ion-select [(ngModel)]="portEmptyNative">
-        <ion-select-option [value]="ports[0].id">{{ports[0].name}}</ion-select-option>
-        <ion-select-option [value]="ports[1].id">{{ports[1].name}}</ion-select-option>
+        <ion-select-option [value]="ports[0].id">{{ports[0].name}}
+        </ion-select-option>
+        <ion-select-option [value]="ports[1].id">{{ports[1].name}}
+        </ion-select-option>
       </ion-select>
     </ion-item>
   </ion-item-group>
@@ -37,8 +39,10 @@
     <ion-item>
       <ion-label>Port</ion-label>
       <ion-select [(ngModel)]="portDefaultNative">
-        <ion-select-option [value]="ports[0].id">{{ports[0].name}}</ion-select-option>
-        <ion-select-option [value]="ports[1].id">{{ports[1].name}}</ion-select-option>
+        <ion-select-option [value]="ports[0].id">{{ports[0].name}}
+        </ion-select-option>
+        <ion-select-option [value]="ports[1].id">{{ports[1].name}}
+        </ion-select-option>
       </ion-select>
     </ion-item>
   </ion-item-group>
@@ -53,8 +57,10 @@
     <ion-item>
       <ion-label position="fixed">Port</ion-label>
       <ion-select [(ngModel)]="portFixedNative">
-        <ion-select-option [value]="ports[0].id">{{ports[0].name}}</ion-select-option>
-        <ion-select-option [value]="ports[1].id">{{ports[1].name}}</ion-select-option>
+        <ion-select-option [value]="ports[0].id">{{ports[0].name}}
+        </ion-select-option>
+        <ion-select-option [value]="ports[1].id">{{ports[1].name}}
+        </ion-select-option>
       </ion-select>
     </ion-item>
   </ion-item-group>
@@ -69,8 +75,10 @@
     <ion-item>
       <ion-label position="stacked">Port</ion-label>
       <ion-select [(ngModel)]="portStackedNative">
-        <ion-select-option [value]="ports[0].id">{{ports[0].name}}</ion-select-option>
-        <ion-select-option [value]="ports[1].id">{{ports[1].name}}</ion-select-option>
+        <ion-select-option [value]="ports[0].id">{{ports[0].name}}
+        </ion-select-option>
+        <ion-select-option [value]="ports[1].id">{{ports[1].name}}
+        </ion-select-option>
       </ion-select>
     </ion-item>
   </ion-item-group>
@@ -85,8 +93,10 @@
     <ion-item>
       <ion-label position="floating">Port</ion-label>
       <ion-select [(ngModel)]="portFloatingNative">
-        <ion-select-option [value]="ports[0].id">{{ports[0].name}}</ion-select-option>
-        <ion-select-option [value]="ports[1].id">{{ports[1].name}}</ion-select-option>
+        <ion-select-option [value]="ports[0].id">{{ports[0].name}}
+        </ion-select-option>
+        <ion-select-option [value]="ports[1].id">{{ports[1].name}}
+        </ion-select-option>
       </ion-select>
     </ion-item>
   </ion-item-group>
