--- a/src/app/pages/min-max-selection/min-max-selection.page.html
+++ b/src/app/pages/min-max-selection/min-max-selection.page.html
@@ -8,7 +8,9 @@
 </ion-header>
 <ion-content>
   <ion-item lines="full">
-    <a href="{{'minmax-selection' | wikiUrl}}">GitHub</a>
+    <a href="{{'minmax-selection' | wikiUrl}}">
+      GitHub
+    </a>
   </ion-item>
   <ion-item lines="full">
     <ion-label text-wrap>
@@ -18,8 +20,9 @@
   <form [formGroup]="form">
     <ion-item>
       <ion-label>Port</ion-label>
-      <ionic-selectable #portComponent formControlName="ports" itemValueField="id"
-        itemTextField="name" [items]="ports" [canClear]="true" [isMultiple]="true"
+      <ionic-selectable #portComponent formControlName="ports"
+        itemValueField="id" itemTextField="name" [items]="ports"
+        [canClear]="true" [isMultiple]="true"
         [isOkButtonEnabled]="portComponent.itemsToConfirm.length >= 1 && portComponent.itemsToConfirm.length <= 3">
         <ng-template ionicSelectableMessageTemplate>
           Select between 1 to 3 items.
@@ -27,8 +30,10 @@
       </ionic-selectable>
     </ion-item>
     <ion-item>
-      <ion-badge slot="end" color="danger" *ngIf="!form.valid">Invalid</ion-badge>
-      <ion-badge slot="end" color="secondary" *ngIf="form.valid">Valid</ion-badge>
+      <ion-badge slot="end" color="danger" *ngIf="!form.valid">Invalid
+      </ion-badge>
+      <ion-badge slot="end" color="secondary" *ngIf="form.valid">Valid
+      </ion-badge>
       <ion-button (click)="clear()" [disabled]="!form.valid">Clear</ion-button>
     </ion-item>
   </form>
