--- a/src/app/pages/primitive-types/primitive-types.page.html
+++ b/src/app/pages/primitive-types/primitive-types.page.html
@@ -25,8 +25,8 @@
     <ion-list-header color="light">Number</ion-list-header>
     <ion-item>
       <ion-label>Terminal</ion-label>
-      <ionic-selectable [(ngModel)]="terminal" [items]="terminals" [canSearch]="true"
-        (onChange)="terminalChange($event)">
+      <ionic-selectable [(ngModel)]="terminal" [items]="terminals"
+        [canSearch]="true" (onChange)="terminalChange($event)">
       </ionic-selectable>
     </ion-item>
   </ion-item-group>
