--- a/src/app/pages/virtual-scroll/virtual-scroll.page.html
+++ b/src/app/pages/virtual-scroll/virtual-scroll.page.html
@@ -14,8 +14,9 @@
   </ion-item>
   <ion-item>
     <ion-label>Port</ion-label>
-    <ionic-selectable [(ngModel)]="port" itemValueField="id" itemTextField="name"
-      [items]="ports" [hasVirtualScroll]="true" [canSearch]="true">
+    <ionic-selectable [(ngModel)]="port" itemValueField="id"
+      itemTextField="name" [items]="ports" [hasVirtualScroll]="true"
+      [canSearch]="true">
     </ionic-selectable>
   </ion-item>
 </ion-content>
