--- a/src/app/pages/adding-on-search-fail-async/adding-on-search-fail-async.page.html
+++ b/src/app/pages/adding-on-search-fail-async/adding-on-search-fail-async.page.html
@@ -8,7 +8,9 @@
 </ion-header>
 <ion-content>
   <ion-item lines="full">
-    <a href="{{'adding-item-asynchronously-when-search-fails' | wikiUrl}}">GitHub</a>
+    <a href="{{'adding-item-asynchronously-when-search-fails' | wikiUrl}}">
+      GitHub
+    </a>
   </ion-item>
   <ion-item lines="full">
     <ion-label text-wrap>
@@ -37,14 +39,14 @@
             </ion-item>
             <ion-item>
               <ion-label>Name</ion-label>
-              <ion-input type="text" formControlName="portName" autocorrect="off"
-                autocapitalize="none">
+              <ion-input type="text" formControlName="portName"
+                autocorrect="off" autocapitalize="none">
               </ion-input>
             </ion-item>
             <ion-item>
               <ion-label>Country</ion-label>
-              <ionic-selectable formControlName="portCountry" itemValueField="id"
-                itemTextField="name" [items]="countries">
+              <ionic-selectable formControlName="portCountry"
+                itemValueField="id" itemTextField="name" [items]="countries">
               </ionic-selectable>
             </ion-item>
           </ion-list>
@@ -53,12 +55,14 @@
           <ion-toolbar>
             <ion-row>
               <ion-col [size]="6">
-                <ion-button expand="full" (click)="portComponent.hideAddItemTemplate()">
+                <ion-button expand="full"
+                  (click)="portComponent.hideAddItemTemplate()">
                   Cancel
                 </ion-button>
               </ion-col>
               <ion-col [size]="6">
-                <ion-button expand="full" (click)="addPort()" [disabled]="!portForm.valid">
+                <ion-button expand="full" (click)="addPort()"
+                  [disabled]="!portForm.valid">
                   Add
                 </ion-button>
               </ion-col>
