--- a/src/app/pages/basic/basic.page.html
+++ b/src/app/pages/basic/basic.page.html
@@ -14,8 +14,9 @@
   </ion-item>
   <ion-item>
     <ion-label>Port</ion-label>
-    <ionic-selectable [(ngModel)]="port" itemValueField="id" itemTextField="name"
-      [items]="ports" [canSearch]="true" (onChange)="portChange($event)">
+    <ionic-selectable [(ngModel)]="port" itemValueField="id"
+      itemTextField="name" [items]="ports" [canSearch]="true"
+      (onChange)="portChange($event)">
     </ionic-selectable>
   </ion-item>
 </ion-content>
