--- a/src/app/pages/editing-async/editing-async.page.html
+++ b/src/app/pages/editing-async/editing-async.page.html
@@ -8,7 +8,9 @@
 </ion-header>
 <ion-content>
   <ion-item lines="full">
-    <a href="{{'adding-editing-and-deleting-items-asynchronously' | wikiUrl}}">GitHub</a>
+    <a href="{{'adding-editing-and-deleting-items-asynchronously' | wikiUrl}}">
+      GitHub
+    </a>
   </ion-item>
   <ion-item lines="full">
     <ion-label text-wrap>
@@ -22,16 +24,18 @@
       a port to be deleted from original array as well.
     -->
     <ionic-selectable #portComponent [(ngModel)]="port" itemValueField="id"
-      itemTextField="name" [(items)]="ports" [canSearch]="true" [canClear]="true"
-      [canAddItem]="true" [canSaveItem]="true" [canDeleteItem]="true"
-      (onSearch)="searchPorts($event)" (onAddItem)="onAddPort($event)"
-      (onSaveItem)="onSavePort($event)" (onDeleteItem)="onDeletePort($event)">
+      itemTextField="name" [(items)]="ports" [canSearch]="true"
+      [canClear]="true" [canAddItem]="true" [canSaveItem]="true"
+      [canDeleteItem]="true" (onSearch)="searchPorts($event)"
+      (onAddItem)="onAddPort($event)" (onSaveItem)="onSavePort($event)"
+      (onDeleteItem)="onDeletePort($event)">
       <ng-template ionicSelectableItemTemplate let-port="item">
         <ion-label>
           {{port.name}} ({{port.country.name}})
         </ion-label>
       </ng-template>
-      <ng-template ionicSelectableAddItemTemplate let-port="item" let-isAdd="isAdd">
+      <ng-template ionicSelectableAddItemTemplate let-port="item"
+        let-isAdd="isAdd">
         <form [formGroup]="portForm">
           <ion-list>
             <ion-item-divider>
@@ -39,14 +43,14 @@
             </ion-item-divider>
             <ion-item>
               <ion-label>Name</ion-label>
-              <ion-input type="text" formControlName="portName" autocorrect="off"
-                autocapitalize="none">
+              <ion-input type="text" formControlName="portName"
+                autocorrect="off" autocapitalize="none">
               </ion-input>
             </ion-item>
             <ion-item>
               <ion-label>Country</ion-label>
-              <ionic-selectable formControlName="portCountry" itemValueField="id"
-                itemTextField="name" [items]="countries">
+              <ionic-selectable formControlName="portCountry"
+                itemValueField="id" itemTextField="name" [items]="countries">
               </ionic-selectable>
             </ion-item>
           </ion-list>
@@ -55,12 +59,14 @@
           <ion-toolbar>
             <ion-row>
               <ion-col [size]="6">
-                <ion-button expand="full" (click)="portComponent.hideAddItemTemplate()">
+                <ion-button expand="full"
+                  (click)="portComponent.hideAddItemTemplate()">
                   Cancel
                 </ion-button>
               </ion-col>
               <ion-col [size]="6">
-                <ion-button expand="full" (click)="isAdd ? addPort() : savePort(port)"
+                <ion-button expand="full"
+                  (click)="isAdd ? addPort() : savePort(port)"
                   [disabled]="!portForm.valid">
                   {{isAdd ? 'Add' : 'Save'}}
                 </ion-button>
