--- a/src/app/pages/grouping-virtual-scroll/grouping-virtual-scroll.page.html
+++ b/src/app/pages/grouping-virtual-scroll/grouping-virtual-scroll.page.html
@@ -8,7 +8,9 @@
 </ion-header>
 <ion-content>
   <ion-item lines="full">
-    <a href="{{'grouping-items-with-virtualscroll' | wikiUrl}}">GitHub</a>
+    <a href="{{'grouping-items-with-virtualscroll' | wikiUrl}}">
+      GitHub
+    </a>
   </ion-item>
   <ion-item lines="full">
     <ion-label text-wrap>
@@ -17,9 +19,9 @@
   </ion-item>
   <ion-item>
     <ion-label>Port</ion-label>
-    <ionic-selectable [(ngModel)]="port" itemValueField="id" itemTextField="name"
-      [items]="ports" [hasVirtualScroll]="true" [virtualScrollHeaderFn]="getGroupText"
-      [canSearch]="true">
+    <ionic-selectable [(ngModel)]="port" itemValueField="id"
+      itemTextField="name" [items]="ports" [hasVirtualScroll]="true"
+      [virtualScrollHeaderFn]="getGroupText" [canSearch]="true">
     </ionic-selectable>
   </ion-item>
 </ion-content>
