--- a/src/app/pages/is-multiple/is-multiple.page.html
+++ b/src/app/pages/is-multiple/is-multiple.page.html
@@ -8,7 +8,9 @@
 </ion-header>
 <ion-content>
   <ion-item lines="full">
-    <a href="{{'ismultiple' | wikiUrl}}">GitHub</a>
+    <a href="{{'ismultiple' | wikiUrl}}">
+      GitHub
+    </a>
   </ion-item>
   <ion-item lines="full">
     <ion-label text-wrap>
@@ -18,7 +20,8 @@
   <ion-item>
     <ion-label>Port</ion-label>
     <ionic-selectable [(ngModel)]="selectedPorts" itemValueField="id"
-      itemTextField="name" [items]="ports" [canClear]="true" [isMultiple]="true">
+      itemTextField="name" [items]="ports" [canClear]="true"
+      [isMultiple]="true">
     </ionic-selectable>
   </ion-item>
 </ion-content>
