--- a/src/app/pages/multiple-values-template/multiple-values-template.page.html
+++ b/src/app/pages/multiple-values-template/multiple-values-template.page.html
@@ -8,7 +8,9 @@
 </ion-header>
 <ion-content>
   <ion-item lines="full">
-    <a href="{{'multiple-values-template' | wikiUrl}}">GitHub</a>
+    <a href="{{'multiple-values-template' | wikiUrl}}">
+      GitHub
+    </a>
   </ion-item>
   <ion-item lines="full">
     <ion-label text-wrap>
@@ -18,7 +20,8 @@
   <ion-item>
     <ion-label>Port</ion-label>
     <ionic-selectable [(ngModel)]="selectedPorts" itemValueField="id"
-      itemTextField="name" [items]="ports" [isMultiple]="true" [canClear]="true">
+      itemTextField="name" [items]="ports" [isMultiple]="true"
+      [canClear]="true">
       <ng-template ionicSelectableValueTemplate let-ports="value">
         <div class="ionic-selectable-value-item" *ngFor="let port of ports">
           <img class="value-country-flag" [src]="port.country.flagUrl" />
