--- a/src/app/pages/on-search/on-search.page.html
+++ b/src/app/pages/on-search/on-search.page.html
@@ -8,21 +8,25 @@
 </ion-header>
 <ion-content>
   <ion-item lines="full">
-    <a href="{{'onsearch' | wikiUrl}}">GitHub</a>
+    <a href="{{'onsearch' | wikiUrl}}">
+      GitHub
+    </a>
   </ion-item>
   <ion-item lines="full">
     <ion-label text-wrap>
       Usage of <b>onSearch</b> event to search items asynchronously.<br />
       Search can be conducted by several item fields: <b>id</b>, <b>name</b>
       and <b>country</b>.<br />
-      For example, type <b>Ger</b> to filter ports by <b>name</b> or <b>country</b>,
+      For example, type <b>Ger</b> to filter ports by <b>name</b> or
+      <b>country</b>,
       or type <b>8</b> to search by <b>id</b>.
     </ion-label>
   </ion-item>
   <ion-item>
     <ion-label>Port</ion-label>
-    <ionic-selectable [(ngModel)]="port" itemValueField="id" itemTextField="name"
-      [items]="ports" [canSearch]="true" (onSearch)="searchPorts($event)"
+    <ionic-selectable [(ngModel)]="port" itemValueField="id"
+      itemTextField="name" [items]="ports" [canSearch]="true"
+      (onSearch)="searchPorts($event)"
       searchPlaceholder="Type &quot;Ger&quot; or &quot;8&quot;">
       <ng-template ionicSelectableItemTemplate let-port="item">
         <ion-label>
