--- a/src/app/pages/placeholder-template/placeholder-template.page.html
+++ b/src/app/pages/placeholder-template/placeholder-template.page.html
@@ -8,7 +8,9 @@
 </ion-header>
 <ion-content>
   <ion-item lines="full">
-    <a href="{{'placeholder-template' | wikiUrl}}">GitHub</a>
+    <a href="{{'placeholder-template' | wikiUrl}}">
+      GitHub
+    </a>
   </ion-item>
   <ion-item lines="full">
     <ion-label text-wrap>
@@ -16,7 +18,7 @@
     </ion-label>
   </ion-item>
   <ion-item>
-    <ionic-selectable #portComponent [(ngModel)]="port2" itemValueField="id"
+    <ionic-selectable #portComponent [(ngModel)]="port" itemValueField="id"
       itemTextField="name" [items]="ports">
       <ng-template ionicSelectableTitleTemplate>
         Port
