--- a/src/app/pages/placeholder/placeholder.page.html
+++ b/src/app/pages/placeholder/placeholder.page.html
@@ -8,7 +8,9 @@
 </ion-header>
 <ion-content>
   <ion-item lines="full">
-    <a href="{{'placeholder' | wikiUrl}}">GitHub</a>
+    <a href="{{'placeholder' | wikiUrl}}">
+      GitHub
+    </a>
   </ion-item>
   <ion-item lines="full">
     <ion-label text-wrap>
