--- a/src/app/pages/search-fail-template/search-fail-template.page.html
+++ b/src/app/pages/search-fail-template/search-fail-template.page.html
@@ -8,7 +8,9 @@
 </ion-header>
 <ion-content>
   <ion-item lines="full">
-    <a href="{{'search-fail-template' | wikiUrl}}">GitHub</a>
+    <a href="{{'search-fail-template' | wikiUrl}}">
+      GitHub
+    </a>
   </ion-item>
   <ion-item lines="full">
     <ion-label text-wrap>
@@ -17,8 +19,8 @@
   </ion-item>
   <ion-item>
     <ion-label>Port</ion-label>
-    <ionic-selectable [(ngModel)]="port" itemValueField="id" itemTextField="name"
-      [items]="ports" [canSearch]="true">
+    <ionic-selectable [(ngModel)]="port" itemValueField="id"
+      itemTextField="name" [items]="ports" [canSearch]="true">
       <ng-template ionicSelectableSearchFailTemplate>
         <div padding>
           No ports found.
