--- a/src/app/pages/values-ellipsis-template/values-ellipsis-template.page.html
+++ b/src/app/pages/values-ellipsis-template/values-ellipsis-template.page.html
@@ -8,7 +8,9 @@
 </ion-header>
 <ion-content>
   <ion-item lines="full">
-    <a href="{{'multiple-values-with-ellipsis-template' | wikiUrl}}">GitHub</a>
+    <a href="{{'multiple-values-with-ellipsis-template' | wikiUrl}}">
+      GitHub
+    </a>
   </ion-item>
   <ion-item lines="full">
     <ion-label text-wrap>
